@@ -248,11 +248,11 @@
 - 概念：`call`指令用于使控制流转移到指定的函数，其传入参数绑定到指定的值。 在被调用函数中执行`ret`指令后，控制流程将在函数调用后继续执行该指令，并且该函数的返回值绑定到`result`参数。
 
 ##### GetElementPtr
-- 格式：`<result> = getelementptr <type>, <type>* <ptrval> [, <type> <idx>]`
+- 格式：`<result> = getelementptr <type>, <type>* <ptrval> {, <type> <idx>}*`
 - 例子：
-  - `%2 = getelementptr [10 x i32], [10 x i32]* %1, i32 0, i32 %0; 0是起始下标,%0是下标` 
-  - `%2 = getelementptr i32, i32* %1, i32 %0; %0是下标,只有一项时默认下标从0开始` 
-- 参数解释：第一个参数是计算基础类型，第二第三个参数表示索引开始的指针类型及指针，`[]`表示可重复参数，里面表示的数组索引的偏移类型及偏移值。（思考指针类型为`[10 x i32]`指针和`i32`指针`getelementptr`用法的不同）
+  - `%2 = getelementptr [10 x i32], [10 x i32]* %1, i32 0, i32 %0; 相当于 %1[%0] (比如a是int a[10]，%0=2相当于a[2]，但其本质是&a[0]+2)，&a是[10 x i32]*，&a[0]是i32*，每多一项就是求当前元素的第几个元素` 
+  - `%2 = getelementptr i32, i32* %1, i32 %0; 相当于 %1+%0 (比如a是int*，%0=1相当于a+1)` 
+- 参数解释：第一个参数是计算基础类型，第二第三个参数表示索引开始的指针类型及指针，`{}*`表示可重复参数，里面表示的数组索引的偏移类型及偏移值。（思考指针类型为`[10 x i32]`指针和`i32`指针`getelementptr`用法的不同）
 - 概念：`getelementptr`指令用于获取数组结构的元素的地址。 它仅执行地址计算，并且不访问内存。
 
 ## C++ APIs
@@ -262,7 +262,7 @@
 ![](figs/核心类概念图.png)
 
 ### BasicBlock
-- 继承：从[value](#value)继承
+- 继承：从[Value](#Value)继承
 
 - 含义：基本块，是一个是单入单出的代码块，该类维护了一个指令链表，基本块本身属于 Value, 类型是 \<label\>，会被分支指令调用
 
@@ -568,7 +568,7 @@
   
   
 ### User
-- 继承：从[value](#value)继承
+- 继承：从[Value](#Value)继承
 
 - 含义：使用者，提供一个操作数表，表中每个操作数都直接指向一个 Value, 提供了 use-def 信息，它本身是 Value 的子类， Value 类会维护一个该数据使用者的列表，提供def-use信息。简单来说操作数表表示我用了谁，该数据使用者列表表示谁用了我。这两个表在后续的**优化实验**会比较重要请务必理解。
 
