@@ -8,6 +8,8 @@ exp6
 
 20211127
 1。修复原本给出的demo中的错误(ConstantFloat写错了)
-2。完成task2的assign
+2。完成task2
 
+4。完成task3的表达式相关部分
+5。对SysYFIR.md中的getelementptr做出更多解释，为实现多维数组做准备
 
